--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,8 @@ spring.datasource.url=jdbc:mysql://localhost/algamoneyapi?createDatabaseIfNotExi
 spring.datasource.username=root
 spring.datasource.password=root
 
+spring.flyway.url=jdbc:mysql://localhost:3306/algamoneyapi
+spring.flyway.user=root
+spring.flyway.password=root
+
 spring.jpa.show-sql=true
