Tratamento de exceções_part 1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.flyway.user=root
 spring.flyway.password=root
 
 spring.jpa.show-sql=true
+
+spring.jackson.deserialization.fail-on-unknown-properties=true
