--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.jpa.database=MYSQL
 spring.datasource.url=jdbc:mysql://localhost/algamoneyapi?createDatabaseIfNotExist=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
+spring.messages.basename=i18n/messages
+spring.messages.encoding=UTF-8
 
 spring.flyway.url=jdbc:mysql://localhost:3306/algamoneyapi
 spring.flyway.user=root
