Adição da listagem de todos os lançametos e buscando por código

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.flyway.password=root
 spring.jpa.show-sql=true
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
+
+spring.jackson.date-format=yyyy-MM-dd
